# e-callisto-NG

./: .env.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  GOVERNANCE.md  OPERATIONS.md  README.md  SECURITY.md  e-Callisto-NG-DESIGN.md  pyproject.toml  vulture_whitelist.py
docs/: changelog.md
docs/architecture/decisions/: ADR-0001-frontend-portal-not-spa.md  ADR-0002-units-raw-adc-default.md  ADR-0003-core-license.md  ADR-0004-outputwriter-takes-recording.md  ADR-0005-bench-capable-contract.md  ADR-0006-audit-log.md  ADR-0007-acquisition-process-isolation.md  ADR-0008-host-hook.md  ADR-0009-time-source-contract.md  ADR-0010-instrument-driver-stability-contract.md  ADR-0011-operations-room-ia.md  ADR-0012-remote-instrument-recovery.md  ADR_INDEX.md
docs/parity/: PARITY_AUDIT.md  WINDOWS_UX.md
docs/planning/: BUG_BACKLOG.md  FEATURE_BACKLOG.md  ROADMAP.md
docs/planning/logbook/: M18_VERIFICATION_2026-06-25.md  SPRINT_LOG_001.md  SPRINT_LOG_002.md  SPRINT_LOG_003.md  SPRINT_LOG_004.md  SPRINT_LOG_005.md  SPRINT_LOG_006.md  SPRINT_LOG_007.md  SPRINT_LOG_008.md  SPRINT_LOG_009.md  SPRINT_LOG_010.md  SPRINT_LOG_011.md  SPRINT_LOG_012.md  SPRINT_LOG_013.md  SPRINT_LOG_014.md  SPRINT_LOG_015.md  SPRINT_LOG_016.md  SPRINT_LOG_017.md  SPRINT_LOG_018.md  SPRINT_LOG_019.md  SPRINT_LOG_020.md  SPRINT_LOG_021.md  SPRINT_LOG_022.md  SPRINT_LOG_023.md  SPRINT_LOG_024.md  SPRINT_LOG_025.md  SPRINT_LOG_026.md  SPRINT_LOG_027.md  SPRINT_LOG_028.md  SPRINT_LOG_029.md  SPRINT_LOG_030.md  SPRINT_LOG_031.md  SPRINT_LOG_032.md  SPRINT_LOG_033.md  SPRINT_LOG_034.md  SPRINT_LOG_035.md  SPRINT_LOG_036.md  SPRINT_LOG_037.md  SPRINT_LOG_038.md  SPRINT_LOG_039.md  (+24 more)
docs/planning/milestones/: V0.2_M6_autonomous.md  V0.2_M7_security.md  V0.2_M8_migration.md  V0.4_M11_recorder_parity.md  V0.4_M12_bench_tools.md  V0.4_M13_viewer_publication.md  (+22 more)
packaging/: README.md
packaging/debian/: changelog  control  postinst  rules
packaging/hook/: ecallisto-hook
packaging/systemd/: ecallisto-acquire.service  ecallisto-acquire.service.in  ecallisto-power.service.in  ecallisto-web.service  ecallisto-web.service.in
packaging/udev/: 99-ecallisto.rules
scripts/: build-sd-image.sh  dev-run.sh  fetch-license.sh  install.sh  no-powersave.sh  run.sh  scan_devices.py  uninstall.sh
src/ecallisto_ng/: __init__.py  cli.py
tests/: conftest.py  test_access.py  test_acquisition.py  test_api_health.py  test_auth.py  test_auto_recover.py  test_bench.py  test_bench_completeness.py  test_bugfix_sweep.py  test_calibration.py  test_calibration_wiring.py  test_callisto_driver.py  test_callisto_protocol.py  test_callisto_selfheal.py  test_cli.py  test_clock_packaging.py  test_config_backup.py  test_contracts.py  test_data.py  test_data_depth.py  test_diagnostics.py  test_diagnostics_packaging.py  test_discovery.py  test_distribution_parity.py  test_fits_accuracy.py  test_fits_writer.py  test_fleet.py  test_freq_plan.py  test_frqfile.py  test_generator_parity.py  test_health.py  test_host_control.py  test_hub_bridge.py  test_instrument_console.py  test_instrument_errors.py  test_instruments.py  test_legacy_import.py  test_lightcurve_png.py  test_live.py  test_liveness.py  (+38 more)
(+202 files in other folders)
