[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecallisto-ng"
version = "0.0.1"
description = "Web-based solar radio spectrometer suite for a station (e-Callisto NG)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD (GPLv3 vs AGPLv3 -- see ADR-0003)" }

# M0 core + fake driver need no runtime deps (core is dependency-free by design).
# Stack deps (fastapi, astropy, pyserial, ...) are added per milestone.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24",
    "ruff>=0.1",
    "flake8>=6",
    "mypy>=1.7",
    "vulture>=2.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["src", "tests"]
select = ["E", "F", "I", "UP", "B"]
extend-exclude = ["vulture_whitelist.py", "legacy"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["src", "tests"]

[tool.vulture]
min_confidence = 70

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
