[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecallisto-ng"
version = "0.4.1"
description = "Web-based solar radio spectrometer suite for a station (e-Callisto NG)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD (GPLv3 vs AGPLv3 -- see ADR-0003)" }

# core + fake driver need no runtime deps (core is dependency-free by design).
# Stack deps are added per milestone, scoped to the layer that needs them.
# astropy/numpy: the FITS writers (writers/). Not imported by core.
dependencies = [
    "astropy>=6",
    "numpy>=1.24",
    "pyserial>=3.5",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "jinja2>=3.1",
    "argon2-cffi>=23",
    "python-multipart>=0.0.9",
    "pillow>=10",
    "cryptography>=42",
]

[project.scripts]
ecallisto-ng = "ecallisto_ng.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24",
    "ruff>=0.1",
    "flake8>=6",
    "mypy>=1.7",
    "vulture>=2.14",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ecallisto_ng.api" = ["templates/**/*.html", "static/**/*"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["vulture_whitelist.py", "legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends()/Query() in argument defaults is idiomatic.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["src", "tests"]

[tool.vulture]
min_confidence = 70

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
